--- a/EWT/EWT-UI/packages.config
+++ b/EWT/EWT-UI/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net472" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="5.2.3" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="JavaScriptEngineSwitcher.Core" version="3.21.0" targetFramework="net472" />
+  <package id="JavaScriptEngineSwitcher.V8" version="3.21.3" targetFramework="net472" />
+  <package id="JavaScriptEngineSwitcher.V8.Native.win-x64" version="3.21.3" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
+  <package id="JSPool" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
@@ -15,9 +20,24 @@
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
+  <package id="Microsoft.ClearScript.Core" version="7.4.2" targetFramework="net472" />
+  <package id="Microsoft.ClearScript.V8" version="7.4.2" targetFramework="net472" />
+  <package id="Microsoft.ClearScript.V8.ICUData" version="7.4.2" targetFramework="net472" />
+  <package id="Microsoft.ClearScript.V8.Native.win-x64" version="7.4.2" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="React.Core" version="5.2.12" targetFramework="net472" />
+  <package id="React.Web" version="5.2.12" targetFramework="net472" />
+  <package id="React.Web.Mvc4" version="5.2.12" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
