--- a/EWT/EWT-DAL/EWT-DAL.csproj
+++ b/EWT/EWT-DAL/EWT-DAL.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -105,6 +105,10 @@
     <Compile Include="Migrations\202308260942080_TicketMovieRelation.designer.cs">
       <DependentUpon>202308260942080_TicketMovieRelation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202308280725470_Polish.cs" />
+    <Compile Include="Migrations\202308280725470_Polish.designer.cs">
+      <DependentUpon>202308280725470_Polish.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\HallRepo.cs" />
@@ -183,6 +187,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202308260942080_TicketMovieRelation.resx">
       <DependentUpon>202308260942080_TicketMovieRelation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308280725470_Polish.resx">
+      <DependentUpon>202308280725470_Polish.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
